syntax = "proto3";
package proto;
option optimize_for = CODE_SIZE;
option go_package = "./;proto";

message CreateCustomerRequest {
  string IDNumber = 1;
  string  IDType = 2;
  string Name = 3;
  string IssueDate = 4;
  string IssuePlace = 5;
}

message CreateCustomerResponse {
  string OneID = 1;
}

message UpdateCustomerInfoRequest {
  string OneID = 1;
  string Email = 2;
  string Tel = 3;
  string Gender = 4;
  string DOB = 5;
  string Address = 6;
}

